Improve style and dropdowns

--- a/src/ui/public/kbn_top_nav/less/custom_style.less
+++ b/src/ui/public/kbn_top_nav/less/custom_style.less
@@ -1,9 +1,11 @@
 .newLocalNav {
     background-color: #333;
+    height: 40px;
 }
 
 .newMenuItem,  .newLocalDropdownTitle{
-    color: #cecece
+    color: #cecece;
+    font-size: 14px;
 }
 
 .newLocalDropdown {
